Fixed issue with arrow covering the scrollbar on the guide

--- a/src/assets/less/content.less
+++ b/src/assets/less/content.less
@@ -163,7 +163,7 @@
   right: 0;
   left: 0;
   bottom: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
   -webkit-transform: translate3d(0,0,0);
   @media(max-width: @xlarge-size) {
     position: static;
@@ -435,7 +435,7 @@ h1 small.beta {
   top: 0;
   bottom: 0;
   right: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
   -webkit-transform: translate3d(0,0,0);
 
   @media(max-width: @medium-size) {
